# pyright-analysis-action

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  Taskfile.yml  action.yml  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml  codeql.yml  test-wf.yml
src/pyright_analysis_action/: __init__.py  _graphql.py  _smoketest.py  _utils.py  action.py  comment.py  smokeshow.py  utils.py
tests/: conftest.py  test_action.py  test_comment.py  test_graphql.py  test_smokeshow.py  test_utils.py
